# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = [
    "//components:__subpackages__",
    "//production/packaging:__subpackages__",
    "//public:__subpackages__",
])

# TODO: b/272282272 move/refactor this code when telemetry is moved to common
cc_library(
    name = "kv_telemetry",
    srcs = [
        "kv_telemetry.cc",
    ],
    hdrs = [
        "kv_telemetry.h",
    ],
    deps = [
        "//components/util:version_linkstamp",
        "//public:constants",
        "@io_opentelemetry_cpp//sdk/src/resource",
    ],
)

cc_library(
    name = "error_code",
    hdrs = ["error_code.h"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "server_definition",
    hdrs = [
        "server_definition.h",
    ],
    deps = [
        ":error_code",
        "@google_privacysandbox_servers_common//src/core/common/uuid",
        "@google_privacysandbox_servers_common//src/metric:context_map",
        "@google_privacysandbox_servers_common//src/util:duration",
        "@google_privacysandbox_servers_common//src/util:read_system",
        "@io_opentelemetry_cpp//sdk/src/metrics",
    ],
)

cc_library(
    name = "open_telemetry_sink",
    srcs = [
        "open_telemetry_sink.cc",
    ],
    hdrs = [
        "open_telemetry_sink.h",
    ],
    deps = [
        "@com_google_absl//absl/log",
        "@google_privacysandbox_servers_common//src/telemetry",
    ],
)
