# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_descriptor_set", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "get_values_proto",
    srcs = ["get_values.proto"],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:httpbody_proto",
        "@com_google_googleapis//google/rpc:status_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

buf_lint_test(
    name = "get_values_proto_lint",
    size = "small",
    config = "//:buf.yaml",
    targets = [
        ":get_values_proto",
    ],
)

proto_descriptor_set(
    name = "query_api_descriptor_set",
    deps = [
        ":get_values_proto",
        "//components/health_check:health",
        "//public/query/v2:get_values_v2_proto",
    ],
)

cc_proto_library(
    name = "get_values_cc_proto",
    deps = [":get_values_proto"],
)

cc_grpc_library(
    name = "get_values_cc_grpc",
    srcs = [":get_values_proto"],
    grpc_only = True,
    deps = [":get_values_cc_proto"],
)

genrule(
    name = "copy_to_dist",
    srcs = [
        ":query_api_descriptor_set",
    ],
    outs = ["copy_to_dist.bin"],
    cmd_bash = """cat << EOF > '$@'
mkdir -p dist
cp $(execpath //public/query:query_api_descriptor_set) dist
builders/tools/normalize-dist
EOF""",
    executable = True,
    local = True,
    message = "copying server artifacts to dist directory",
)
