# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "sharding_function",
    srcs = ["sharding_function.cc"],
    hdrs = ["sharding_function.h"],
    deps = [
        "@distributed_point_functions//pir/hashing:sha256_hash_family",
    ],
)

cc_test(
    name = "sharding_function_test",
    size = "small",
    srcs = [
        "sharding_function_test.cc",
    ],
    deps = [
        ":sharding_function",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "key_sharder",
    srcs = ["key_sharder.cc"],
    hdrs = ["key_sharder.h"],
    deps = [
        ":sharding_function",
    ],
)

cc_test(
    name = "key_sharder_test",
    size = "small",
    srcs = [
        "key_sharder_test.cc",
    ],
    deps = [
        ":key_sharder",
        "@com_google_googletest//:gtest_main",
    ],
)
