# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@google_privacysandbox_servers_common//src/roma/tools/api_plugin:roma_app_api.bzl", "js_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "binary_get_values_proto",
    srcs = ["binary_get_values.proto"],
    deps = [
    ],
)

cc_proto_library(
    name = "binary_get_values_cc_proto",
    deps = [":binary_get_values_proto"],
)

# Library that can be added as a dep from closure_js_library or *_js_binary rules
js_proto_library(
    name = "binary_get_values_js_proto",
    proto_basename = "binary_get_values",
    protos = [":binary_get_values_proto"],
)

cc_library(
    name = "constants",
    srcs = [
        "constants.h",
    ],
    deps = [
    ],
)
